--- a/themes/tranquilpeak/layout/_partial/index.ejs
+++ b/themes/tranquilpeak/layout/_partial/index.ejs
@@ -13,7 +13,7 @@
             if (is_remote_url(post.thumbnailImage)) {
                 thumbnailImageUrl = post.thumbnailImage;
             } else {
-                thumbnailImageUrl = url_for(post.permalink + post.thumbnailImage);
+                thumbnailImageUrl = url_for(post.path + post.thumbnailImage);
             }
             // Define third images (cover image and first photo) as thumbnail image
         } else if (theme.thumbnail_image && (post.autoThumbnailImage === true ||
@@ -22,13 +22,13 @@
                 if (is_remote_url(post.photos[0])) {
                     thumbnailImageUrl = post.photos[0].match(rPhoto)[1];
                 } else {
-                    thumbnailImageUrl = url_for(post.permalink + post.photos[0].match(rPhoto)[1]);
+                    thumbnailImageUrl = url_for(post.path + post.photos[0].match(rPhoto)[1]);
                 }
             } else if (post.coverImage && post.coverImage.length) {
                 if (is_remote_url(post.coverImage)) {
                     thumbnailImageUrl = post.coverImage;
                 } else {
-                    thumbnailImageUrl = url_for(post.permalink + post.coverImage);
+                    thumbnailImageUrl = url_for(post.path + post.coverImage);
                 }
             }
         }
