--- a/themes/tranquilpeak/layout/_partial/post/actions.ejs
+++ b/themes/tranquilpeak/layout/_partial/post/actions.ejs
@@ -40,26 +40,17 @@
             </a>
         </li>
         <li class="post-action hide-xs">
-            <a class="post-action-btn btn btn--default" target="new" href="<%= 'https://twitter.com/intent/tweet?text=' + post.permalink %>">
+            <a class="post-action-btn btn btn--default" target="new" href="https://twitter.com/share?text=<%= urlEncode(post.title) %>&via=<%= theme.author.twitter %>&url=<%= urlEncode(post.permalink) %>">
                 <i class="fa fa-twitter"></i>
             </a>
         </li>
-        <% if (post.comments && (theme.disqus_shortname || theme.duoshuo_shortname)) { %>
-            <li class="post-action">
-                <a class="post-action-btn btn btn--default" href="#<%= (theme.duoshuo_shortname ? 'ds-thread' : 'disqus_thread') %>">
-                    <i class="fa fa-comment-o"></i>
-                </a>
-            </li>
-        <% } %>
+        <% if ((/<!--(\s*)[t|T][o|O][c|C](\s*)-->/).test(post.content)) { %>
         <li class="post-action">
-            <% if ((/<!--(\s*)[t|T][o|O][c|C](\s*)-->/).test(post.content)) { %>
-                <a class="post-action-btn btn btn--default" href="#table-of-contents">
-            <%} else { %>
-                <a class="post-action-btn btn btn--default" href="#">
-            <% } %>
+            <a class="post-action-btn btn btn--default" href="#table-of-contents">
                 <i class="fa fa-list"></i>
             </a>
         </li>
+        <% } %>
     </ul>
 </div>
 
