add post action

--- a/themes/tranquilpeak/layout/_partial/head.ejs
+++ b/themes/tranquilpeak/layout/_partial/head.ejs
@@ -146,6 +146,7 @@
     <% } %>
     <!--STYLES-->
     <%- css('assets/css/style-nuvue6sithwirecbhvw3dkaobiojqvtadsnhguwi7k04xklybw5djl1smadp.min.css') %>
+    <%- css('assets/style.css') %>
     <!--STYLES END-->
     <%- partial('google-analytics') %>
     <%- partial('baidu-analytics') %>
